--- a/tic_tac_toe/package.json
+++ b/tic_tac_toe/package.json
@@ -2,7 +2,7 @@
   "name": "react_tic_tac_toe",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://dewi-ayu.github.io/React_tic_tac_toe/",
+  "homepage": "https://clarity-89.github.io/React_tic_tac_toe/",
   "dependencies": {
     "gh-pages": "^2.2.0",
     "papercss": "^1.8.1",
